[gd_scene load_steps=2 format=3 uid="uid://gestionar_empleados"]

[ext_resource type="Script" path="res://ui/gestionar_empleados_new.gd" id="1_empleados"]

[node name="GestionarEmpleados" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_empleados")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Header" type="Panel" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 70)

[node name="HeaderContent" type="HBoxContainer" parent="MainContainer/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="MainContainer/Header/HeaderContent"]
layout_mode = 2
text = "üë®‚Äçüíº GESTIONAR EMPLEADOS"
vertical_alignment = 1
add_theme_font_size_override("font_size", 24)

[node name="HSeparator" type="Control" parent="MainContainer/Header/HeaderContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VolverBtn" type="Button" parent="MainContainer/Header/HeaderContent"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "üîô VOLVER"

[node name="ToolsPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 70)

[node name="ToolsContent" type="HBoxContainer" parent="MainContainer/ToolsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0

[node name="SearchContainer" type="HBoxContainer" parent="MainContainer/ToolsPanel/ToolsContent"]
layout_mode = 2

[node name="SearchLabel" type="Label" parent="MainContainer/ToolsPanel/ToolsContent/SearchContainer"]
layout_mode = 2
text = "üîç Buscar:"
vertical_alignment = 1

[node name="SearchInput" type="LineEdit" parent="MainContainer/ToolsPanel/ToolsContent/SearchContainer"]
layout_mode = 2
custom_minimum_size = Vector2(250, 35)
placeholder_text = "Escriba para buscar empleados..."

[node name="HSeparator2" type="Control" parent="MainContainer/ToolsPanel/ToolsContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionContainer" type="HBoxContainer" parent="MainContainer/ToolsPanel/ToolsContent"]
layout_mode = 2
add_theme_constant_override("separation", 10)

[node name="NuevoBtn" type="Button" parent="MainContainer/ToolsPanel/ToolsContent/ActionContainer"]
layout_mode = 2
custom_minimum_size = Vector2(140, 40)
text = "‚ûï NUEVO"

[node name="RefreshBtn" type="Button" parent="MainContainer/ToolsPanel/ToolsContent/ActionContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "üîÑ ACTUALIZAR"

[node name="EmployeesPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EmployeesContent" type="VBoxContainer" parent="MainContainer/EmployeesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="InfoLabel" type="Label" parent="MainContainer/EmployeesPanel/EmployeesContent"]
layout_mode = 2
text = "üìä Total de empleados: 0"
vertical_alignment = 1

[node name="EmployeesScroll" type="ScrollContainer" parent="MainContainer/EmployeesPanel/EmployeesContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="EmployeesList" type="VBoxContainer" parent="MainContainer/EmployeesPanel/EmployeesContent/EmployeesScroll"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="MainContainer/ToolsPanel/ToolsContent/SearchContainer/SearchInput" to="." method="_on_search_changed"]
[connection signal="pressed" from="MainContainer/ToolsPanel/ToolsContent/ActionContainer/NuevoBtn" to="." method="_on_nuevo_empleado_pressed"]
[connection signal="pressed" from="MainContainer/ToolsPanel/ToolsContent/ActionContainer/RefreshBtn" to="." method="_on_actualizar_pressed"]
[connection signal="pressed" from="MainContainer/Header/HeaderContent/VolverBtn" to="." method="_on_volver_pressed"]